--- a/themes/war/assets/css/style.css
+++ b/themes/war/assets/css/style.css
@@ -702,7 +702,7 @@ button:hover, .button:hover, button:active, .button:active {
 
 #denun {
     width: 100%;
-    height: 120vh !important;
+    height: 100% !important;
     background: url(../img/intro-bg.jpg) top center;
     background-size: cover;
     overflow: hidden;
@@ -720,11 +720,11 @@ button:hover, .button:hover, button:active, .button:active {
 }
 
 #denun .intro-container {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    top: 90px;
-    right: 0;
+    /*position: absolute;*/
+    /*bottom: 0;*/
+    /*left: 0;*/
+    margin-top: 90px;
+    /*right: 0;*/
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
