--- a/shared/css/style.css
+++ b/shared/css/style.css
@@ -147,7 +147,7 @@ img {
 }
 
 .breadcrumb-holder {
-      background-color: #b0003a;
+      background-color: #efefef;
       margin: 0px -20px 20px -20px;
       padding: 13px 25px 0 25px;
       box-shadow: none;
@@ -175,7 +175,6 @@ img {
 
 .card-header {
 	color: #6b6b6b;
-    background-color: #69f0ae;
     border-bottom: 1px solid rgba(111,111,111,.13);
 }
 
